[package]
name = "slr"
authors = ["Joel Montes de Oca"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
